# RPI4-Kernel-Test

./: .gitignore  README.md
kernel_test_daemon/: Cargo.toml  build.rs  controller.service  exec.sh  log4rs.yaml  runner.sh  worker.service
kernel_test_daemon/proto/: service.proto
kernel_test_daemon/src/: cfg.rs  controller.rs  mail.rs  task.rs  worker.rs
kernel_test_daemon/src/task/: controller.rs  mod.rs  worker.rs
